modify md file.

--- a/_posts/2016-10-26-1.md
+++ b/_posts/2016-10-26-1.md
@@ -1,3 +1,14 @@
-# 庆祝开博
+---
+layout:     post
+title:      庆祝开博
+subtitle:   iOS定时器详解
+date:       2018-08-23
+author:     neomx7
+header-img: img/users/2018-08-23/eluosi.png
+catalog: 	 true
+tags:
+    - iOS
+    - 定时器
+---
 
 几经纠结，还是开了自己的博客。
