--- a/_posts/2018-08-23-1.md
+++ b/_posts/2018-08-23-1.md
@@ -12,4 +12,8 @@ tags:
 
 几经纠结，还是开了自己的博客。
 
-\\[f(z)=\frac{1}{2\pi i}\oint_C\frac{f(\xi)}{\xi-z}d\xi\\]
+来个公式庆祝一下。
+
+$$
+[f(z)=\frac{1}{2\pi i}\oint_C\frac{f(\xi)}{\xi-z}d\xi]
+$$
