--- a/_posts/2025-04-09-记一次性能测试调优过程.md
+++ b/_posts/2025-04-09-记一次性能测试调优过程.md
@@ -4,7 +4,7 @@ title:      记一次性能测试调优过程
 subtitle:   web压力测试
 date:       2025-04-09
 author:     neomx7
-header-img: img/users/2025-04/computer-test.png
+header-img: img/users/2025-04/computer-test.jpg
 catalog: 	 true
 tags:
     - 性能测试
